syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";

option go_package = "message-service/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

// The greeting service definition.
service Notification {
  // Sends a greeting
  rpc CreateNotification (RequestNotification) returns (ReplyNotification) {
    option (google.api.http) = {
      post: "/alert/notification"
      body:"*",
    };
  }
    rpc PaymentNotification (RequestPaymentDetails) returns (ReplyPaymentDetails) {
    option (google.api.http) = {
      post: "/alert/notification/payment"
      body:"*",
    };
  }
}

// The request message containing the user's name.
message RequestNotification {
  string email = 1;
}

// The response message containing the greetings
message ReplyNotification {
  string messages = 1;
}
message RequestPaymentDetails{
    int64 payment_id = 1;
  int64 from_account_id = 2;
  int64 to_account_id = 3;
  string payment_type = 4;
  int64 amount = 5;
  string currency = 6;
  string status = 7;
  string payment_method = 8;
  string reference_number = 9;
  string external_reference = 10;
}

message ReplyPaymentDetails{
   int64 payment_id = 1;
  int64 from_account_id = 2;
  int64 to_account_id = 3;
  string payment_type = 4;
  int64 amount = 5;
  string currency = 6;
  string status = 7;
  string payment_method = 8;
  string reference_number = 9;
  string external_reference = 10;
}
