syntax = "proto3";

package payments.v1;

import "google/api/annotations.proto";

option go_package = "payments/api/payments/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.payments.v1";
option java_outer_classname = "PaymentsProtoV1";

service Payment {
  // Payment endpoints
  rpc CreatePayment (CreatePaymentRequest) returns (CreatePaymentReply) {
    option (google.api.http) = {
      post: "/v1/payments"
      body: "*"
    };
  }
  rpc UpdatePayment (UpdatePaymentRequest) returns (UpdatePaymentReply) {
    option (google.api.http) = {
      patch: "/v1/payments/{payment_id}"
      body: "*"
    };
  }
  rpc DeletePayment (DeletePaymentRequest) returns (DeletePaymentReply) {
    option (google.api.http) = {
      delete: "/v1/payments/{payment_id}"
    };
  }
  rpc DisplayPayment (FindPaymentByIdRequest) returns (FindPaymentByIdReply) {
    option (google.api.http) = {
      get: "/v1/payments/{payment_id}"
    };
    
  }
}

// Payment messages
message CreatePaymentRequest {
  int64 payment_id = 1;
  int64 from_account_id = 2;
  int64 to_account_id = 3;
  string payment_type = 4;
  double amount = 5;
  string currency = 6;
  string status = 7;
  string payment_method = 8;
  string reference_number = 9;
  string external_reference = 10;
}

message CreatePaymentReply {
  string message = 11;
  int64 payment_id = 1;
  int64 from_account_id = 2;
  int64 to_account_id = 3;
  string payment_type = 4;
  double amount = 5;
  string currency = 6;
  string status = 7;
  string payment_method = 8;
  string reference_number = 9;
  string external_reference = 10;
}

message UpdatePaymentRequest {
  int64 payment_id = 1;
  int64 from_account_id = 2;
  int64 to_account_id = 3;
  string payment_type = 4;
  double amount = 5;
  string currency = 6;
  string status = 7;
  string payment_method = 8;
  string reference_number = 9;
  string external_reference = 10;
}

message UpdatePaymentReply {
  string message = 1;
  repeated CreatePaymentReply display = 2;
}

message DeletePaymentRequest {
  int64 payment_id = 1;
}

message DeletePaymentReply {
  string message = 1;
}

message FindPaymentByIdRequest {
  int64 payment_id = 1;
}

message FindPaymentByIdReply {
  repeated CreatePaymentReply display = 1;
}