syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";

option go_package = "cardservice/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

service Card {
 

  // Transaction endpoints
  rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionReply) {
    option (google.api.http) = {
      post: "/v1/helloworld/transaction"
      body: "*"
    };
  }
  rpc UpdateTransaction (UpdateTransactionRequest) returns (UpdateTransactionReply) {
    option (google.api.http) = {
      patch: "/v1/helloworld/transaction/{transaction_id}"
      body: "*"
    };
  }
  rpc DeleteTransaction (DeleteTransactionRequest) returns (DeleteTransactionReply) {
    option (google.api.http) = {
      delete: "/v1/helloworld/transaction/{transaction_id}"
    };
  }
  rpc DisplayTransaction (FindTransactionByIdRequest) returns (FindTransactionByIdReply) {
    option (google.api.http) = {
      get: "/v1/helloworld/transaction/{transaction_id}"
    };
  }
}





// Transaction messages
message CreateTransactionRequest {
  int64 transactionid = 1;
  int64 account_id = 2;
  int64 related_transaction_id = 3;
  string transaction_type = 4;
  double amount = 5;
  string currency = 6;
  string status = 7;
  string description = 8;
  string reference_number = 9;
  string posting_date = 10; // Format: YYYY-MM-DD
}

message CreateTransactionReply {
  string message = 11;
  int64 transaction_id = 1;
  int64 account_id = 2;
  int64 related_transaction_id = 3;
  string transaction_type = 4;
  double amount = 5;
  string currency = 6;
  string status = 7;
  string description = 8;
  string reference_number = 9;
  string posting_date = 10;
}

message UpdateTransactionRequest {
  int64 transaction_id = 1;
  int64 account_id = 2;
  int64 related_transaction_id = 3;
  string transaction_type = 4;
  double amount = 5;
  string currency = 6;
  string status = 7;
  string description = 8;
  string reference_number = 9;
  string posting_date = 10;
}

message UpdateTransactionReply {
  string message = 1;
  repeated CreateTransactionReply display = 2;
}

message DeleteTransactionRequest {
  int64 transaction_id = 1;
}

message DeleteTransactionReply {
  string message = 1;
}

message FindTransactionByIdRequest {
  int64 transaction_id = 1;
}

message FindTransactionByIdReply {
  repeated CreateTransactionReply display = 1;
}